# perfAnls

./: .gitignore  PROJECT_FILES.md  README.md  SESSION_SUMMARY.md  change_model.md  install.sh  planA.md  pyproject.toml  requirements.txt  start.sh  test_cases_api.json  text_to_sql_guide.md
app/: config.py  main.py
app/api/models/: responses.py
app/api/v1/: __init__.py  analysis.py
app/api/v1/endpoints/: dynamic_analysis.py
app/models/: process.py
app/prompts/: __init__.py  schema_selector.py  text_to_sql_prompt.py
app/repositories/: database.py  performance_repo.py
app/security/: __init__.py  sql_validator.py
app/services/: ai_analysis_service.py  ai_service.py  analysis_service.py  dynamic_query_service.py  text_to_sql_service.py
gradio/: README.md  app.py  start_gradio.sh
schema/: act_ge_bytearray.json  act_ru_deadletter_job.json  act_ru_job.json  pe_ext_actinst.json  pe_ext_actinst.json.bak  pe_ext_procinst.json  pe_ext_procinst.json.bak  pe_ext_varinst.json  pe_ext_varinst.json.bak  semantic_layer_example.json
sql/: performance_queries.sql
tests/: test_ai_analysis_service.py  test_basic.py  test_dynamic_analysis_endpoint.py  test_dynamic_query_service.py  test_sql_validator.py  test_text_to_sql_prompt.py  test_text_to_sql_service.py
tests/integration/: __init__.py  test_text_to_sql_integration.py
